--- a/ecad/gschem/Makefile
+++ b/ecad/gschem/Makefile
@@ -3,7 +3,9 @@ PROJNAME = 12_LED_METER
 DESIGN = \
 	12.000.00.00.01.sch \
 	12.000.00.01.01.sch \
-	12.000.00.01.02.sch
+	12.000.00.01.02.sch \
+	12.000.00.01.03.sch \
+	12.000.00.01.04.sch
 
 DFM = \
 	12.002.00.01.01.sch \
